börjat med index.html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/index_grid.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div id="grid">
+        <header class="log">
+            <img src="img/Logo.jpg" alt="TechTrek logo" class="logo_pic">
+            <h1 class="logo_text">TechTrek</h1>
+        </header>
+
+        <nav class="nav">
+            nav
+        </nav>
+
+        <main id="man">
+            <img src="img/technology.webp" alt="technology picture">
+        </main>
+
+        <section id="sec">
+            section
+        </section>
+
+        <aside id="asi">
+            aside
+        </aside>
+
+        <article id="art">
+            article
+        </article>
+
+        <footer class="fot">
+            footer
+        </footer>
+    </div>
 </body>
 </html>
